src/objects/invoices__x.object
<CustomObject>
    <description>invoices</description>
    <externalDataSource>BillingService</externalDataSource>
    <externalName>invoices</externalName>
    <fields>
        <fullName>billAmount__c</fullName>
        <description>billAmount</description>
        <externalDeveloperName>billAmount</externalDeveloperName>
        <label>billAmount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>billDate__c</fullName>
        <description>billDate</description>
        <externalDeveloperName>billDate</externalDeveloperName>
        <label>billDate</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceId__c</fullName>
        <description>invoiceId</description>
        <externalDeveloperName>invoiceId</externalDeveloperName>
        <label>invoiceId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>projectRef__c</fullName>
        <description>projectRef</description>
        <externalDeveloperName>projectRef</externalDeveloperName>
        <label>projectRef</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>invoices</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>invoices</pluralLabel>
</CustomObject>